Add nunjucks markdown support for quote text

--- a/src/app/views/quote.njk
+++ b/src/app/views/quote.njk
@@ -13,6 +13,8 @@
   </p>
 
   <div>
-    {{ quote.content }}
+    {% markdown %}
+      {{ quote.content }}
+    {% endmarkdown %}
   </div>
 {% endblock  %}
