--- a/src/app/views/index.njk
+++ b/src/app/views/index.njk
@@ -1,11 +1,9 @@
-{% extends 'layout.njk' %}
+{% extends 'omis-base.njk' %}
 
 {% set pageTitle='Homepage' %}
 
-{% block page_content %}
-
-	<p>
-		The homepage
-	</p>
-
+{% block body_main_content %}
+  <p>
+    The homepage
+  </p>
 {% endblock  %}
