--- a/src/app/views/quote.njk
+++ b/src/app/views/quote.njk
@@ -1,6 +1,6 @@
-{% extends 'layout.njk' %}
+{% extends 'omis-base.njk' %}
 
-{% block page_content %}
+{% block body_main_content %}
   <h1>{{ order.reference }}</h1>
 
   <p>{{ order.contact.name }}</p>
