--- a/src/app/views/errors/404.njk
+++ b/src/app/views/errors/404.njk
@@ -1,15 +1,13 @@
-{% extends 'layout.njk' %}
+{% extends 'omis-base.njk' %}
 
 {% set pageTitle='Not found' %}
 
-{% block page_content %}
+{% block body_main_content %}
+  <h1 class="error-heading">
+    404
+  </h1>
 
-	<h1 class="error-heading">
-		404
-	</h1>
-
-	<p>
-		The resource you were looking for could not be found.
-	</p>
-
+  <p>
+    The resource you were looking for could not be found.
+  </p>
 {% endblock  %}
