--- a/src/app/views/quote.njk
+++ b/src/app/views/quote.njk
@@ -1,4 +1,4 @@
-{% extends 'omis-base.njk' %}
+{% extends '_layouts/omis-base.njk' %}
 
 {% block body_main_content %}
   <h1>{{ order.reference }}</h1>
