Add components needed to display quote
This pulls in the components that this app requires from data hub
and tweaks some basic element styles.

--- a/assets/stylesheets/_elements.scss
+++ b/assets/stylesheets/_elements.scss
@@ -1,3 +1,4 @@
 @import "elements/base";
-@import "elements/headings";
+@import "elements/heading";
+@import "elements/list";
 @import "elements/table";
