--- a/assets/stylesheets/layout/_assemblies.scss
+++ b/assets/stylesheets/layout/_assemblies.scss
@@ -4,51 +4,32 @@
 // View assemblies
 // Define how components stack in views
 
-* + {
-  form,
-  .c-form-group,
-  .c-form-actions,
-  .c-form-fieldset,
-  .c-collection {
+body {
+  * + * {
     margin-top: $default-spacing-unit * 2;
-  }
-
-  .c-form-group--compact,
-  .c-message-list,
-  .c-message {
-    margin-top: $default-spacing-unit;
-  }
-
-  .c-multiple-choice,
-  .c-meta-list {
-    margin-top: $default-spacing-unit / 2;
-  }
-
-  .c-meta-container,
-  .c-multiple-choice--smaller {
-    margin-top: $baseline-grid-unit;
-  }
-
-  .metadata-list {
-    margin-top: $default-spacing-unit / 4;
-  }
-
-  .c-form-fieldset--subfield,
-  .c-form-group--subfield {
-    margin-top: $default-spacing-unit;
-    margin-bottom: $default-spacing-unit;
-  }
-
-  .c-pagination {
-    margin-top: $default-spacing-unit * 2;
-    margin-bottom: $default-spacing-unit * 2;
+    margin-bottom: 0;
   }
 }
 
-[type="hidden"] + .c-form-group {
-  margin-top: 0;
+summary,
+script,
+input[type="hidden"],
+.skip-links,
+.notification-banner,
+.global-header,
+.main-content {
+  & + * {
+    margin-top: 0;
+  }
 }
 
-.c-results__sort + .c-entity-list {
-  border-top: 1px solid $grey-2;
+summary {
+  & + * {
+    margin-top: $default-spacing-unit;
+  }
+}
+
+dt + dd,
+li + li {
+  margin-top: $baseline-grid-unit;
 }
