Import macros from data hub for re-use
This imports a subset of the macros used in data hub that need to be
used for this app.

--- a/src/app/views/_layouts/omis-base.njk
+++ b/src/app/views/_layouts/omis-base.njk
@@ -1,5 +1,8 @@
 {% extends '_layouts/dit-base.njk' %}
 
+{% from '_macros/entity.njk' import MetaList %}
+{% from "_macros/common.njk" import Message %}
+
 {% block body_footer_content_ogl %}{% endblock %}
 
 {% block body_footer_content_copyright %}{% endblock %}
