Add polyfill support for details element
This adds fallback JavaScript to support the details element in older
browsers if JavaScript is available. If no JS is available then it
will simply display all elements rather than hiding the sibling of
the summary element.

--- a/src/app/views/_layouts/omis-base.njk
+++ b/src/app/views/_layouts/omis-base.njk
@@ -3,6 +3,13 @@
 {% from '_macros/entity.njk' import MetaList %}
 {% from "_macros/common.njk" import Message %}
 
+{% block body %}
+  {{ super() }}
+  {% block javascript %}
+    <script src="{{ getAssetPath('app.js') }}"></script>
+  {% endblock %}
+{% endblock %}
+
 {% block body_footer_content_ogl %}{% endblock %}
 
 {% block body_footer_content_copyright %}{% endblock %}
