--- a/assets/stylesheets/_elements.scss
+++ b/assets/stylesheets/_elements.scss
@@ -1,4 +1,5 @@
 @import "elements/base";
+@import "elements/details";
 @import "elements/heading";
 @import "elements/list";
 @import "elements/table";
