Add macro to support progressive reveal of content
This adds a macro for the details element to support hiding of content
that has a lower priority on the page.

--- a/src/app/views/_layouts/omis-base.njk
+++ b/src/app/views/_layouts/omis-base.njk
@@ -1,7 +1,7 @@
 {% extends '_layouts/dit-base.njk' %}
 
 {% from '_macros/entity.njk' import MetaList %}
-{% from "_macros/common.njk" import Message %}
+{% from "_macros/common.njk" import Message, Reveal %}
 
 {% block body %}
   {{ super() }}
