--- a/src/app/views/_macros/common.njk
+++ b/src/app/views/_macros/common.njk
@@ -1,6 +1,8 @@
 {% from "./common/from-now.njk" import FromNow %}
 {% from "./common/messages.njk" import Message, MessageList %}
+{% from "./common/reveal.njk" import Reveal %}
 
 {% set FromNow = FromNow %}
 {% set Message = Message %}
 {% set MessageList = MessageList %}
+{% set Reveal = Reveal %}
