Add confirmation banner component

--- a/assets/stylesheets/elements/_details.scss
+++ b/assets/stylesheets/elements/_details.scss
@@ -1,6 +1,4 @@
-// sass-lint:disable nesting-depth
-// @import "../environment/settings/colours";
-// @import "../environment/tools/mixins";
+@import "../settings/colours";
 
 details {
   clear: both;
