--- a/assets/stylesheets/_components.scss
+++ b/assets/stylesheets/_components.scss
@@ -1,4 +1,5 @@
 @import "components/.example";
 @import "components/button";
+@import "components/confirmation-banner";
 @import "components/messages";
 @import "components/meta-list";
