Add summary route for order
This adds a separate route to show the summary for an order.

Allows this screen to include sections like invoicing and payment
details as they are added.

--- a/src/app/views/quote-accepted.njk
+++ b/src/app/views/quote-accepted.njk
@@ -7,8 +7,18 @@
     </h1>
 
     <p>
-      Your order reference number is
+      Your reference number is
       <strong class="confirmation-banner__referene">{{ order.reference }}</strong>
     </p>
   </div>
+
+  <h3>What happens next</h3>
+
+  <p>You will receive a confirmation email that the quote has been accepted.</p>
+
+  <p>You will need to pay the invoice within 30 days.</p>
+
+  <p>
+    <a href="/{{ publicToken }}">Return to summary</a>
+  </p>
 {% endblock  %}
