--- a/src/app/views/quote.njk
+++ b/src/app/views/quote.njk
@@ -1,7 +1,11 @@
 {% extends '_layouts/omis-base.njk' %}
 
 {% block body_main_content %}
-  <h1>Order {{ order.reference }}</h1>
+  <p>
+    <a href="/{{ publicToken }}">Back to summary</a>
+  </p>
+
+  <h1>Your quote ({{ order.reference }})</h1>
 
   {{ MetaList({
     items: [
