Support print specific layouts

--- a/src/app/views/_layouts/dit-base.njk
+++ b/src/app/views/_layouts/dit-base.njk
@@ -42,6 +42,7 @@
 
       {% block head_stylesheets %}
         <link href="{{ getAssetPath('styles.css') }}" media="screen" rel="stylesheet">
+        <link href="{{ getAssetPath('styles.print.css') }}" media="print" rel="stylesheet">
       {% endblock %}
     {% endblock %}
     <script>(function(d){d.className=d.className.replace(/\bno-js\b/,'js-enabled')})(document.documentElement)</script>
