--- a/assets/stylesheets/objects/base/_global-header.scss
+++ b/assets/stylesheets/objects/base/_global-header.scss
@@ -4,6 +4,10 @@
 .global-header {
   background-color: $black;
   color: $white;
+
+  @if $is-print {
+    color: $black;
+  }
 }
 
 .global-header__inner {
@@ -36,6 +40,10 @@
     background-image: url("../../../images/dit-crest__white@2x.png");
     background-size: 28px 30px;
   }
+
+  @if $is-print {
+    display: none;
+  }
 }
 
 .global-header__link {
@@ -56,6 +64,10 @@
 .global-header__logo {
   border-bottom: 1px solid transparent;
   margin-left: -4px;
+
+  @if $is-print {
+    margin-left: 0;
+  }
 }
 
 .global-header__link:hover .global-header__logo {
