Rename media mixin to not clash with import govuk mixin
We needed to tweak the mixin but it was being overridden by the
govuk_frontend_toolkit mixin so renaming was the best option for now.

--- a/assets/stylesheets/components/_meta-list.scss
+++ b/assets/stylesheets/components/_meta-list.scss
@@ -56,7 +56,7 @@
     margin-top: $default-spacing-unit / 2;
   }
 
-  @include media(tablet) {
+  @include media-query(tablet) {
     display: inline-block;
 
     & + & {
@@ -83,7 +83,7 @@
     margin-left: 0;
   }
 
-  @include media(tablet) {
+  @include media-query(tablet) {
     .c-meta-list__item:nth-child(odd) {
       float: left;
       clear: both;
