--- a/assets/stylesheets/tools/functions/_typography.scss
+++ b/assets/stylesheets/tools/functions/_typography.scss
@@ -70,12 +70,12 @@
   line-height: line-height($level, "small");
   text-transform: none;
 
-  @include media(tablet) {
+  @include media-query(tablet) {
     font-size: type-scale($level, "medium");
     line-height: line-height($level, "medium");
   }
 
-  @include media(desktop) {
+  @include media-query(desktop) {
     font-size: type-scale($level);
     line-height: line-height($level);
   }
@@ -139,7 +139,7 @@
 @mixin element-spacing($position: top) {
   margin-#{$position}: $default-spacing-unit;
 
-  @include media(desktop) {
+  @include media-query(desktop) {
     margin-#{$position}: $default-spacing-unit * 2;
   }
 }
@@ -160,19 +160,19 @@
   @if $type == full {
     padding: $default-spacing-unit;
 
-    @include media(desktop) {
+    @include media-query(desktop) {
       padding: $default-spacing-unit * 2;
     }
   } @else if $type == vertical {
     padding: $default-spacing-unit 0;
 
-    @include media(desktop) {
+    @include media-query(desktop) {
       padding: ($default-spacing-unit * 2) 0;
     }
   } @else {
     padding-#{$type}: $default-spacing-unit;
 
-    @include media(desktop) {
+    @include media-query(desktop) {
       padding-#{$type}: $default-spacing-unit * 2;
     }
   }
