--- a/assets/stylesheets/trumps/_layout.scss
+++ b/assets/stylesheets/trumps/_layout.scss
@@ -7,7 +7,7 @@
   padding-right: $default-spacing-unit;
   max-width: $site-width;
 
-  @include media($min-width: $site-width) {
+  @include media-query($min-width: $site-width) {
     padding-left: 0;
     padding-right: 0;
   }
@@ -18,7 +18,7 @@
   > h1,
   > h2 {
     &:first-child {
-      @include media(tablet) {
+      @include media-query(tablet) {
         margin-top: 0;
       }
     }
