--- a/assets/stylesheets/components/_.example.scss
+++ b/assets/stylesheets/components/_.example.scss
@@ -20,7 +20,7 @@
 }
 
 .example--wide .example__preview {
-  @include media($min-width: $site-width + $default-spacing-unit * 4) {
+  @include media-query($min-width: $site-width + $default-spacing-unit * 4) {
     margin-left: -$default-spacing-unit * 2;
     margin-right: -$default-spacing-unit * 2;
   }
