--- a/assets/stylesheets/components/_messages.scss
+++ b/assets/stylesheets/components/_messages.scss
@@ -14,7 +14,7 @@
   position: relative;
   background-color: $white;
 
-  @include media(tablet) {
+  @include media-query(tablet) {
     .js-Messages & {
       padding-right: 90px;
     }
@@ -27,7 +27,7 @@
   line-height: 32px;
   text-decoration: none;
 
-  @include media(tablet) {
+  @include media-query(tablet) {
     position: absolute;
     line-height: 32px;
     top: $default-spacing-unit;
