--- a/assets/stylesheets/layout/_assemblies.scss
+++ b/assets/stylesheets/layout/_assemblies.scss
@@ -43,3 +43,11 @@ h2, h3, h4, h5 {
 p + p {
   margin-top: $default-spacing-unit / 2;
 }
+
+.u-clearfix {
+  > * {
+    @include media-query(tablet) {
+      margin-top: 0;
+    }
+  }
+}
