--- a/src/app/views/order-summary.njk
+++ b/src/app/views/order-summary.njk
@@ -3,25 +3,19 @@
 {% block body_main_content %}
   <h1>{{ order.reference }}</h1>
 
-  {{ MetaList({
-    items: [
-      { label: 'Status', value: order.status | sentenceCase }
-    ],
-    itemModifier: 'stacked'
-  }) }}
-
   {% if invoice %}
     <h2>Your invoice</h2>
 
     {{ MetaList({
       items: [
-        { label: 'Created on on', value: invoice.created_on, type: 'datetime' }
+        { label: 'Created on', value: invoice.created_on, type: 'datetime' },
+        { label: 'Invoice number', value: invoice.invoice_number }
       ],
       itemModifier: 'stacked'
     }) }}
 
     <p>
-      <a href="/{{ publicToken }}/invoice">View invoice {{ invoice.invoice_number }}</a>
+      <a href="/{{ publicToken }}/invoice">View your invoice</a>
     </p>
   {% endif %}
 
@@ -33,16 +27,16 @@
 
   {{ MetaList({
     items: [
-      { label: 'Sent on', value: quote.created_on, type: 'datetime' },
+      { label: 'We sent it on', value: quote.created_on, type: 'datetime' },
       { label: expiryLabel, value: quote.expires_on if not quote.accepted_on, type: 'fromNow' },
-      { label: 'Accepted on', value: quote.accepted_on if quote.accepted_on, type: 'datetime' }
+      { label: 'You accepted it on', value: quote.accepted_on if quote.accepted_on, type: 'datetime' }
     ],
     itemModifier: 'stacked'
   }) }}
 
     <p>
       <a href="/{{ publicToken }}/quote" class="{{ 'button' if not quote.accepted_on }}">
-        View
+        View your
         {{ 'accepted' if quote.accepted_on }}
         quote
       </a>
