Use subtotal_cost rather than net_cost for excluding VAT
The net cost doesn't include any applied discounts for legacy orders
so would show and incorrect value that could be higher than the
total cost.

--- a/src/app/views/invoice.njk
+++ b/src/app/views/invoice.njk
@@ -72,7 +72,7 @@
       <tr>
         <td>{{ order.reference }}</td>
         <td>OMIS</td>
-        <td align="right">{{ order.net_cost | formatCurrency }}</td>
+        <td align="right">{{ order.subtotal_cost | formatCurrency }}</td>
         <td align="right">{{ order.vat_cost | formatCurrency }}</td>
         <td align="right">{{ order.total_cost | formatCurrency }}</td>
       </tr>
