Combine invoice meta list items to be stacked

--- a/src/app/views/invoice.njk
+++ b/src/app/views/invoice.njk
@@ -33,8 +33,12 @@
     <div class="u-float-left">
       {{ MetaList({
         items: [
-          { label: 'To', value: billingAddress, safe: true }
+          { label: 'To', value: billingAddress, safe: true },
+          { label: 'Purchase order (PO) number', value: invoice.po_number },
+          { label: 'Invoice number', value: invoice.invoice_number },
+          { label: 'Created on', value: invoice.created_on, type: 'datetime' }
         ],
+        modifier: 'stacked',
         itemModifier: 'stacked'
       }) }}
     </div>
@@ -42,8 +46,10 @@
     <div class="u-float-right">
       {{ MetaList({
         items: [
-          { label: 'From', value: invoiceAddress, safe: true }
+          { label: 'From', value: invoiceAddress, safe: true },
+          { label: 'VAT number', value: invoice.invoice_vat_number }
         ],
+        modifier: 'stacked',
         itemModifier: 'stacked'
       }) }}
     </div>
