fixup! Add support for payment receipt

--- a/src/app/views/_includes/cost-table.njk
+++ b/src/app/views/_includes/cost-table.njk
@@ -27,7 +27,7 @@
   </tbody>
   <tfoot>
     <tr>
-      <td colspan="3" class="table__cell--unstyled"></td>
+      <td colspan="3" class="table__cell--plain"></td>
       <th>
         VAT {{ 'at 20%' if order.vat_cost > 0 }}
       </th>
@@ -36,7 +36,7 @@
       </td>
     </tr>
     <tr>
-      <td colspan="3" class="table__cell--unstyled"></td>
+      <td colspan="3" class="table__cell--plain"></td>
       <th>
         Total amount
       </th>
