--- a/src/app/views/order-summary.njk
+++ b/src/app/views/order-summary.njk
@@ -33,11 +33,15 @@
     Expire{{ 'd' if quote.expired else 's' }}
   {% endset %}
 
+  {% set expiryValue %}
+    {{ quote.expires_on | formatDate }} ({{ quote.expires_on | fromNow }})
+  {% endset %}
+
   {{ MetaList({
     items: [
       { label: 'We sent it on', value: quote.created_on, type: 'datetime' },
-      { label: expiryLabel, value: quote.expires_on if not quote.accepted_on, type: 'fromNow' },
-      { label: 'You accepted it on', value: quote.accepted_on if quote.accepted_on, type: 'datetime' }
+      { label: expiryLabel, value: expiryValue if not quote.accepted_on },
+      { label: 'You accepted it on', value: quote.accepted_on, type: 'datetime' }
     ],
     modifier: 'stacked',
     itemModifier: 'stacked'
