Add message for completed orders

--- a/src/app/views/order-summary.njk
+++ b/src/app/views/order-summary.njk
@@ -3,6 +3,13 @@
 {% block body_main_content %}
   <h1>{{ order.reference }}</h1>
 
+  {% if order.status === 'complete' %}
+    {% call Message({ type: 'success', element: 'div' }) %}
+      <p>Your order has been completed and you should have received any documents for this order.</p>
+      <p>If there are any problems, get in touch with your DIT contact or email <a href="mailto:omis.orders@digital.trade.gov.uk">omis.orders@digital.trade.gov.uk</a></p>
+    {% endcall %}
+  {% endif %}
+
   {% if invoice %}
     <h2>Your invoice</h2>
 
