Show correct date for when an order was paid

--- a/src/app/views/order-summary.njk
+++ b/src/app/views/order-summary.njk
@@ -17,7 +17,7 @@
       items: [
         { label: 'Invoice number', value: invoice.invoice_number },
         { label: 'Created on', value: invoice.created_on, type: 'datetime' },
-        { label: 'Paid on', value: invoice.paid_on, type: 'datetime' }
+        { label: 'Paid on', value: order.paid_on, type: 'date' }
       ],
       modifier: 'stacked',
       itemModifier: 'stacked'
