Don't show invoices for legacy order

--- a/src/app/views/order-summary.njk
+++ b/src/app/views/order-summary.njk
@@ -23,9 +23,11 @@
       itemModifier: 'stacked'
     }) }}
 
-    <p>
-      <a href="/{{ publicToken }}/invoice">View your invoice</a>
-    </p>
+    {% if invoice.company_name %}
+      <p>
+        <a href="/{{ publicToken }}/invoice">View your invoice</a>
+      </p>
+    {% endif %}
 
     {% if order.status in ['paid', 'complete'] %}
       <p>
