--- a/src/app/views/order-summary.njk
+++ b/src/app/views/order-summary.njk
@@ -27,6 +27,12 @@
       <p>
         <a href="/{{ publicToken }}/invoice">View your invoice</a>
       </p>
+    {% else %}
+      {% call Reveal({ summary: 'How can I see my invoice?' }) %}
+        {% call Message({ type: 'muted' }) %}
+          Get in touch with your DIT contact or email <a href="mailto:omis.orders@digital.trade.gov.uk">omis.orders@digital.trade.gov.uk</a>
+        {% endcall %}
+      {% endcall %}
     {% endif %}
 
     {% if order.status in ['paid', 'complete'] %}
