--- a/src/app/views/quote.njk
+++ b/src/app/views/quote.njk
@@ -51,6 +51,12 @@
         {% endcall %}
       </div>
     </article>
+  {% else %}
+    {% call Reveal({ summary: 'How can I see my quote?' }) %}
+      {% call Message({ type: 'muted' }) %}
+        Get in touch with your DIT contact or email <a href="mailto:omis.orders@digital.trade.gov.uk">omis.orders@digital.trade.gov.uk</a>
+      {% endcall %}
+    {% endcall %}
   {% endif %}
 
   {% if not quote.expired and not quote.accepted_on and not quote.cancelled_on %}
