Use correct property name for checking legacy invoices

--- a/src/app/views/order-summary.njk
+++ b/src/app/views/order-summary.njk
@@ -23,7 +23,7 @@
       itemModifier: 'stacked'
     }) }}
 
-    {% if invoice.company_name %}
+    {% if invoice.invoice_company_name %}
       <p>
         <a href="/{{ publicToken }}/invoice">View your invoice</a>
       </p>
