--- a/src/app/views/_layouts/omis-base.njk
+++ b/src/app/views/_layouts/omis-base.njk
@@ -2,6 +2,7 @@
 
 {% from '_macros/entity.njk' import MetaList %}
 {% from "_macros/common.njk" import Message, Reveal %}
+{% from "_macros/form.njk" import ErrorSummary, MultipleChoiceField %}
 
 {% block body %}
   {{ super() }}
